# aoc2025

./: .gitignore  LICENSE  README.md
.github/workflows/: python-app.yml
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
day06/: part1.py  part2.py
support/: pyproject.toml  support.py
